--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.5.3",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.1",
     "yup": "^1.3.2"
   }
